--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.9.1
 dj-database-url==3.0.1
 Django==5.2.6
 django-heroku==0.3.1
+gunicorn==23.0.0
+packaging==25.0
 psycopg2==2.9.10
 setuptools==78.1.1
 sqlparse==0.5.3
